--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${DB_URL}jdbc:postgresql://localhost:5432/multi-sim-psqldb
-spring.datasource.username=${DB_USERNAME:-siemens-project} 
-spring.datasource.password=${DB_PASSWORD:-1010abab}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/multi-sim-psqldb}
+spring.datasource.username=${DB_USERNAME:siemens-project}
+spring.datasource.password=${DB_PASSWORD:1010abab}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
