--- a/Multi-Simulation-Profiling-Analysis-Backend/src/main/resources/application.properties
+++ b/Multi-Simulation-Profiling-Analysis-Backend/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/multi-sim-psqldb
 spring.datasource.username=siemens-project
 spring.datasource.password=1010abab
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
