--- a/Multi-Simulation-Profiling-Analysis-Backend/build.gradle
+++ b/Multi-Simulation-Profiling-Analysis-Backend/build.gradle
@@ -13,14 +13,29 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+  //  implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation 'org.jetbrains:annotations:24.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.10'
+    runtimeOnly 'org.postgresql:postgresql:42.5.4'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.10'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.10'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.10'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.10'
+    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.10'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.10'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
+    implementation 'org.postgresql:postgresql:42.5.4'
+    implementation 'org.projectlombok:lombok:1.18.26'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
+    testImplementation 'org.springframework.security:spring-security-test:6.0.2'
+    implementation 'javax.mail:mail:1.4.7'
+    implementation 'org.hibernate:hibernate-entitymanager:5.6.15.Final'
+
+
 
 }
-
 tasks.named('test') {
     useJUnitPlatform()
 }
