--- a/Multi-Simulation-Profiling-Analysis-Backend/src/main/resources/application.properties
+++ b/Multi-Simulation-Profiling-Analysis-Backend/src/main/resources/application.properties
@@ -3,3 +3,51 @@ spring.datasource.username=siemens-project
 spring.datasource.password=1010abab
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.show-sql=true
+
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+logging.level.org.springframework=DEBUG
+
+
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=hello
+spring.mail.password=hello
+spring.mail.properties.mail.smtp.ssl.trust="*"
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+
+#mail.smtp.host=<myhostname.com>
+#mail.smtp.port=25
+#mail.smtp.auth=true
+#mail.transport.protocol=smtp
+#smtpd_recipient_restrictions=permit_sasl_authenticated
+#user=<sender_username/email>
+#password=<password>
+#mail.smtp.username=<sender_username/email>
+#mail.smtp.password=<password>
+#
+#spring.properties.mail.smtp.ssl.trust="*"
+#spring.properties.mail.smtp.auth=true
+#spring.properties.mail.smtp.starttls.enable=false
+#spring.properties.mail.smtp.starttls.connectiontimeout=5000
+#spring.properties.mail.smtp.starttls.timeout=3000
+#spring.properties.mail.smtp.starttls.writetimeout=3000
+server.error.include-binding-errors=always
+server.error.include-message=always
+
+
+
+
