--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.10'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.7.10'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.10'
+    // // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    // compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.10'
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
@@ -32,6 +35,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test:6.0.2'
     implementation 'javax.mail:mail:1.4.7'
     implementation 'org.hibernate:hibernate-entitymanager:5.6.15.Final'
+    // implementation 'org.springframework.security:spring-security-core:5.6.1'
 
 
 
