--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       DB_URL: jdbc:postgresql://java_db:5432/multi-sim-psqldb
     ports:
       - "8080:8080"
+    volumes:
+      - ./:/app
 
   java_db:
     container_name: java_db
