--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,5 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 server.error.include-binding-errors=always
 server.error.include-message=always
 spring.main.allow-circular-references=true
-
-
-
-
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
