--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,4 @@ server.error.include-message=always
 spring.main.allow-circular-references=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+app.link=http://localhost:8080/auth/confirm?token=
